--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -106,6 +106,11 @@ h1 {
     color: var(--secondary-text-color);
 }
 
+@media(max-width: 24em) {
+    .imageCard {
+        width: 90%;
+    }
+}
 
 @media(max-width: 786px) {
     .videoCard video{
