--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,7 @@ body {
     font-size: 1.2em;
     font-family: 'Kano';
     text-shadow: 0px 0px 30px #000000;
+    text-transform: lowercase;
 }
 
 .navbar.black .menu ul li a {
@@ -133,7 +134,7 @@ footer p em {
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        padding: 1em 2.7em;
+        padding: 0.8em 2.7em;
         margin-top: 1em;
     }
     .navbar-left {
@@ -151,6 +152,12 @@ footer p em {
     }
     .menu ul li {
         margin: 2em 0em;
+    }
+}
+
+@media(max-width: 460px) {
+    .logo-text {
+        display: none;
     }
 }
 
